--- a/my-recipes-app-FE/src/app/components/add-recipe/add-recipe.component.html
+++ b/my-recipes-app-FE/src/app/components/add-recipe/add-recipe.component.html
@@ -1,1 +1,36 @@
 <p>add-recipe works!</p>
+<div style="width: 400px; margin: auto;">
+  <div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          required
+          [(ngModel)]="recipe.title"
+          name="title"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="description">Description</label>
+        <input
+          class="form-control"
+          id="description"
+          required
+          [(ngModel)]="recipe.description"
+          name="description"
+        />
+      </div>
+
+      <button (click)="saveRecipe()" class="btn btn-success">Submit</button>
+    </div>
+
+    <div *ngIf="submitted">
+      <h4>You submitted successfully!</h4>
+      <button class="btn btn-success" (click)="newRecipe()">Add</button>
+    </div>
+  </div>
+</div>
