--- a/my-recipes-app-FE/src/app/app.component.html
+++ b/my-recipes-app-FE/src/app/app.component.html
@@ -3,10 +3,10 @@
     <a href="#" class="navbar-brand">Logo</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLink="recipes" class="nav-link">Recipes</a>
+        <a routerLink="recipes" class="nav-link">All Recipes</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add</a>
+        <a routerLink="add" class="nav-link">Add a Recipe</a>
       </li>
     </div>
   </nav>
