added User & Role models

--- a/my-recipes-app-FE/src/app/app.component.html
+++ b/my-recipes-app-FE/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <nav class="navbar navbar-expand navbar-dark bg-secondary">
     <a href="#" class="navbar-brand">Logo</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
@@ -15,3 +15,4 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+
