added new Components for Authentication

--- a/my-recipes-app-FE/src/app/components/recipes-list/recipes-list.component.html
+++ b/my-recipes-app-FE/src/app/components/recipes-list/recipes-list.component.html
@@ -3,13 +3,13 @@
     <div class="input-group mb-3">
       <input
         type="text"
-        class="form-control"
+        class="form-control mt-3"
         placeholder="Search by title"
         [(ngModel)]="title"
       />
       <div class="input-group-append">
         <button
-          class="btn btn-outline-primary"
+          class="btn btn-outline-primary mt-3"
           type="button"
           (click)="searchTitle()"
         >
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 mt">
     <h4>Recipes List</h4>
     <ul class="list-group">
       <li
