--- a/my-recipes-app-FE/src/app/components/add-recipe/add-recipe.component.html
+++ b/my-recipes-app-FE/src/app/components/add-recipe/add-recipe.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="submit-form">
     <div *ngIf="!submitted">
-      <div class="form-group">
+      <div class="form-group mt-3">
         <label for="title">Title</label>
         <input
           type="text"
@@ -10,7 +10,18 @@
           required
           [(ngModel)]="recipe.title"
           name="title"
+          #title="ngModel"
         />
+        <div
+                class="alert alert-danger"
+                role="alert"
+                *ngIf="title.errors && f.submitted"
+        >
+          <div *ngIf="title.errors.required">title is required</div>
+          <div *ngIf="title.errors.minlength">
+            title must be at least 6 characters
+          </div>
+        </div>
       </div>
 
       <div class="form-group">
