--- a/my-recipes-app-FE/src/app/components/register/register.component.html
+++ b/my-recipes-app-FE/src/app/components/register/register.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="form-group mt-4">
-        <button class="btn btn-dark btn-block">Sign Up</button>
+        <button class="btn btn-primary btn-block">Sign Up</button>
       </div>
 
       <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
