fixed recipe-detail form position

--- a/my-recipes-app-FE/src/app/components/recipe-details/recipe-details.component.html
+++ b/my-recipes-app-FE/src/app/components/recipe-details/recipe-details.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div *ngIf="currentRecipe" class="edit-form">
+  <div *ngIf="currentRecipe" class="edit-form mt-3">
     <h4>Recipe</h4>
     <form>
       <div class="form-group">
